--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,43 @@
-*.html
+html
 .ipynb_checkpoints/
 examples/
 processed_data/
 example_data/
+
+#built application files
+app/*.apk
+app/*.ap_
+
+# files for the dex VM
+app/*.dex
+
+# Java class files
+app/*.class
+
+# generated files
+app/bin/
+app/gen/
+
+# Local configuration file (sdk path, etc)
+app/local.properties
+
+# Windows thumbnail db
+app/Thumbs.db
+
+# OSX files
+.DS_Store
+
+# Android Studio
+app/*.iml
+app/.idea
+app/.idea/workspace.xml
+app/.gradle
+app/gradle
+app/build/
+app/.navigation
+app/captures/
+app/output.json 
+
+#NDK
+app/obj/
+app/.externalNativeBuild
