--- a/android-app/app/build.gradle
+++ b/android-app/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'ai.h2o:xgboost-predictor:0.3.8'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
