--- a/android-app/app/build.gradle
+++ b/android-app/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'ai.h2o:xgboost-predictor:0.3.8'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
