--- a/android-app/app/build.gradle
+++ b/android-app/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation "com.daimajia.swipelayout:library:1.2.0@aar"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
