--- a/android-app/app/src/main/AndroidManifest.xml
+++ b/android-app/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TripSummaryActivity"></activity>
+        <activity android:name=".TripSummaryActivity"
+            android:label="@string/completed_journey"/>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
