--- a/android-app/app/build.gradle
+++ b/android-app/app/build.gradle
@@ -42,7 +42,10 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation "com.daimajia.swipelayout:library:1.2.0@aar"
+    implementation 'com.google.gms:google-services:4.3.3'
 
+
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
