--- a/android-app/app/build.gradle
+++ b/android-app/app/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     implementation "com.daimajia.swipelayout:library:1.2.0@aar"
     implementation 'com.google.gms:google-services:4.3.3'
     implementation 'com.akexorcist:RoundCornerProgressBar:2.0.3'
+    implementation 'com.romandanylyk:pageindicatorview:1.0.3'
+    implementation 'com.airbnb.android:lottie:3.3.0'
 
 
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
